<resources>
    <string name="app_name">Spiritual Warfare</string>
    <string name="welcome_string">Alithos Anesti!</string>
    <string name="new_game_button">New Game</string>
    <string name="load_game_button">Load Game</string>
    <string name="options_button">Options</string>
    <string name="high_score_button">High Score</string>
    <string name="about_button">About</string>
    <string name="how_button">How To Play</string>
    <string name="music_button">Music</string>
    <string name="select_human_string">Select Human</string>
    <string name="select_angel_string">Select Angel</string>
    <string name="new_pop_up">Starting a new game will overwrite the previous game.\n\nDo you wish to continue?</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="michael_name">Michael</string>
    <string name="gabriel_name">Gabriel</string>
    <string name="raphael_name">Raphael</string>
    <string name="uriel_name">Uriel</string>
    <string name="attack_speed_string">Attack Speed</string>
    <string name="shield_recovery_string">Shield Recovery</string>
    <string name="fast_string">Fast</string>
    <string name="slow_string">Slow</string>
    <string name="lets_start_string">Let\'s Start!</string>
    <string name="game_over_string">Game Over!</string>
    <string name="game_over_pop_up">Game Over!\n\nWould you like to try again?</string>
    <string name="todo">TODO</string>
    <string name="about_info_1">COPYRIGHT (C) 2021\nTheotokos Solutions</string>
    <string name="about_info_2">Creative Director</string>
    <string name="about_info_3">God</string>
    <string name="about_info_4">Programming, Design, Music</string>
    <string name="about_info_5">Ezekiel Lizarraga</string>
    <string name="about_info_6">Special Thanks</string>
    <string name="about_info_7">Most Holy Theotokos</string>
    <string name="how_to_1">It\'s your job to protect your human so that they can reach the top of the screen unharmed.</string>
    <string name="how_to_2">You will play as one of the guardian angels: Michael, Gabriel, Raphael or Uriel.</string>
    <string name="how_to_3">Demons will appear at the top of the screen and try to drag your human to the bottom.</string>
    <string name="how_to_4">You will need to tap on the demons 3 times in order to kill them.</string>
    <string name="how_to_5">Watch out for the temptations! These will appear from the side of the screen and will mislead your human off the path. Hit them 4 times to destroy them.</string>
    <string name="how_to_6">The life and soul of your human is in your hands. May God be with you!</string>
    <string name="how_to_7">Drag your finger across the screen to create a shield that temporarily blocks the demons. You only have a limited amount of shield power, though, before you need to recharge it.</string>
    <string name="how_to_8">Don\'t forget about your Holy Hand Grenade of Righteousness! Using this will destroy all the demons that are currently on the screen. You can only use it when you have full shield power. Use it wisely, because it wastes all of your shield power.</string>
    <string name="stop_game">Are you sure you want to quit?</string>
    <string name="music_info_1">Spiritual Warfare Theme</string>
    <string name="music_info_2">Guardian Angel\n(Level 1)</string>
    <string name="music_info_3">Annunciation\n(Level 2)</string>
    <string name="music_info_4">Nativity\n(Level 3)</string>
    <string name="music_info_5">Agni Parthene\n(Level 4)</string>
    <string name="music_info_6">Theophany Troparion\n(Level 5)</string>
    <string name="music_info_7">Psalm 135 - Tone V\n(Level 6)</string>
    <string name="music_info_8">Kyrie Eleison\n(Level 7)</string>
    <string name="music_info_9">Christos Anesti\n(Level 8)</string>
    <string name="music_info_10">Cherubic Hymn\n(Level 9)</string>
    <string name="music_info_11">Ladder To Heaven\n(Level 10)</string>
    <string name="music_info_12">The Day Of Judgement\n(Level 11)</string>
    <string name="music_info_13">The High Priest\n(Level 12)</string>
    <string name="music_info_14">Win Theme</string>
    <string name="music_info_15">Bonus Track:\nEternal Rest</string>
    <string name="shield_text">Shield:</string>
</resources>
