<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/angel_sobor">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCFFFFFF"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/music_button"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.793">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CCFFFFFF"
            android:orientation="vertical"
            android:padding="20dp">

            <Button
                android:id="@+id/music_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_1"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_2"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_3"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_4"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_5"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_6"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_7"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_8"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_9"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_10"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_11"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_12"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_13"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_14"
                android:textSize="21sp" />

            <Button
                android:id="@+id/music_button_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#770066AA"
                android:fontFamily="@font/aclonica"
                android:padding="7dp"
                android:text="@string/music_info_15"
                android:textSize="21sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>