<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PopUpActivity">

    <ImageView
        android:id="@+id/pop_up_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#11000000"
        android:contentDescription="@string/todo"
        android:tint="#11000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:background="#000000"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/game_over_pop_up"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/aclonica"
                android:padding="5dp"
                android:text="@string/yes_string"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/aclonica"
                android:padding="5dp"
                android:text="@string/no_string"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:clickable="true"
                android:focusable="true"
                />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>